tests/ui/resolve/loops.stderr
error: unresolved symbol
  --> ROOT/tests/ui/resolve/loops.sol:LL:CC
   |
LL |     while (a == 0) uint a = 0;
   |            ^
   |

error: unresolved symbol
  --> ROOT/tests/ui/resolve/loops.sol:LL:CC
   |
LL |     a;
   |     ^
   |

error: unresolved symbol
  --> ROOT/tests/ui/resolve/loops.sol:LL:CC
   |
LL |     while (b == 0) { uint b = 0; }
   |            ^
   |

error: unresolved symbol
  --> ROOT/tests/ui/resolve/loops.sol:LL:CC
   |
LL |     b;
   |     ^
   |

error: unresolved symbol
  --> ROOT/tests/ui/resolve/loops.sol:LL:CC
   |
LL |     do uint c; while (c == 0);
   |                       ^
   |

error: unresolved symbol
  --> ROOT/tests/ui/resolve/loops.sol:LL:CC
   |
LL |     c;
   |     ^
   |

error: unresolved symbol
  --> ROOT/tests/ui/resolve/loops.sol:LL:CC
   |
LL |     do { uint d; } while (d == 0);
   |                           ^
   |

error: unresolved symbol
  --> ROOT/tests/ui/resolve/loops.sol:LL:CC
   |
LL |     d;
   |     ^
   |

error: unresolved symbol
  --> ROOT/tests/ui/resolve/loops.sol:LL:CC
   |
LL |     for (; false; e++) uint e;
   |                   ^
   |

error: unresolved symbol
  --> ROOT/tests/ui/resolve/loops.sol:LL:CC
   |
LL |     e;
   |     ^
   |

error: unresolved symbol
  --> ROOT/tests/ui/resolve/loops.sol:LL:CC
   |
LL |     for (; false; f++) { uint f; }
   |                   ^
   |

error: unresolved symbol
  --> ROOT/tests/ui/resolve/loops.sol:LL:CC
   |
LL |     f;
   |     ^
   |

error: unresolved symbol
  --> ROOT/tests/ui/resolve/loops.sol:LL:CC
   |
LL |     g;
   |     ^
   |

error: aborting due to 13 previous errors

